# hs-wai-cryptocookie

./: .gitignore  README.md  cabal.project  flake.nix
wai-cryptocookie/: CHANGELOG.md  LICENSE  README.md  cabal.nix  default.nix  wai-cryptocookie.cabal
wai-cryptocookie/lib/Wai/: CryptoCookie.hs
wai-cryptocookie/lib/Wai/CryptoCookie/: Encoding.hs  Encryption.hs  Middleware.hs
wai-cryptocookie/lib/Wai/CryptoCookie/Encryption/: AEAD_AES_128_GCM_SIV.hs  AEAD_AES_256_GCM_SIV.hs
wai-cryptocookie/test/: Main.hs
wai-session-cookie/: LICENSE  default.nix  wai-session-cookie.cabal
wai-session-cookie/lib/Wai/: SessionCookie.hs
wai-session-cookie/lib/Wai/SessionCookie/: AEAD_AES_128_GCM_SIV.hs  AEAD_AES_256_GCM_SIV.hs  Internal.hs
