cabal-version: 2.4
name: wai-cryptocookie
version: 0.3
license: Apache-2.0
license-file: LICENSE
extra-source-files: README.md CHANGELOG.md
author: Renzo Carbonara
maintainer: renλren.zone
copyright: Renzo Carbonara, 2024
category: Web
build-type: Simple
synopsis: Encrypted cookies for WAI
description: Encrypted cookies for WAI
homepage: https://github.com/k0001/hs-wai-cryptocookie
bug-reports: https://github.com/k0001/hs-wai-cryptocookie/issues
tested-with: GHC == 9.8.1

common basic
  default-language: GHC2021
  build-depends: base == 4.*
  default-extensions:
    BlockArguments
    DataKinds
    DerivingStrategies
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies
    ViewPatterns


library
  import: basic
  ghc-options: -O2 -Wall
  hs-source-dirs: lib
  exposed-modules:
    Wai.CryptoCookie
  other-modules:
    Wai.CryptoCookie.Encryption
    Wai.CryptoCookie.Encryption.AEAD_AES_128_GCM_SIV
    Wai.CryptoCookie.Encryption.AEAD_AES_256_GCM_SIV
  build-depends:
    aeson,
    bytestring,
    case-insensitive,
    cookie,
    crypton,
    http-types,
    memory,
    text,
    time,
    wai,
    wai-csrf,

test-suite test
  import: basic
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -threaded -with-rtsopts=-N
  build-depends:
    bytestring,
    cookie,
    directory,
    filepath,
    http-types,
    wai,
    wai-cryptocookie,
    wai-extra,

